# gutsygit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTIONS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  test_and_build.yml
gutsygit/: client.py  main.py  utils.py
tests/: test_commands.py
