[tool.poetry]
name = "gutsygit"
version = "0.5.0"
description = "Command-line tool for fast git usage"
authors = ["Sander Land"]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
profile = "black"
skip_glob = '^((?!py$).)*$' # python files

[tool.poetry.dependencies]
python = "^3.7"
GitPython = ">=3"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gg = "gutsygit.main:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

