[tool.poetry]
name = "gutsygit"
version = "0.6.0"
description = "Command-line tool for fast git usage"
authors = ["Sander Land"]
license = "Apache-2.0"
readme = "README.md"
repository = "http://github.com/sanderland/gutsygit"
keywords = ["git", "productivity"]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
profile = "black"
skip_glob = '^((?!py$).)*$' # python files

[tool.poetry.dependencies]
python = "^3.7"
GitPython = ">=3"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b1"
isort = "^5.8.0"
twine = "^3.4.1"
pre-commit = "^2.13.0"

[tool.poetry.scripts]
gg = "gutsygit.main:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

